crates/backyard-parser/tests/snapshots/array__basic.snap
---
source: crates/backyard-parser/tests/array.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: array
    is_short: false
    items:
      - node_type: array_item
        key: ~
        value:
          node_type: number
          value: "1"
          loc:
            start:
              line: 1
              column: 6
              offset: 6
            end:
              line: 1
              column: 6
              offset: 6
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 6
            offset: 6
          end:
            line: 1
            column: 6
            offset: 6
        leadings: []
        trailings: []
      - node_type: array_item
        key: ~
        value:
          node_type: number
          value: "2"
          loc:
            start:
              line: 1
              column: 9
              offset: 9
            end:
              line: 1
              column: 9
              offset: 9
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 9
            offset: 9
          end:
            line: 1
            column: 9
            offset: 9
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 10
        offset: 10
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 11
    offset: 11
leadings: []
trailings: []
