crates/backyard-parser/tests/snapshots/array__short.snap
---
source: crates/backyard-parser/tests/array.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: array
    is_short: true
    items:
      - node_type: array_item
        key: ~
        value:
          node_type: number
          value: "1"
          loc: ~
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 1
            offset: 1
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      - node_type: array_item
        key: ~
        value:
          node_type: number
          value: "2"
          loc: ~
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 4
            offset: 4
          end:
            line: 1
            column: 4
            offset: 4
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 5
        offset: 5
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 6
    offset: 6
leadings: ~
trailings: ~
