crates/backyard-parser/tests/snapshots/array__with_key.snap
---
source: crates/backyard-parser/tests/array.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: array
    is_short: true
    items:
      - node_type: array_item
        key:
          node_type: string
          quote: Single
          value: a
          loc:
            start:
              line: 1
              column: 1
              offset: 1
            end:
              line: 1
              column: 1
              offset: 1
          leadings: []
          trailings: []
        value:
          node_type: number
          value: "1"
          loc:
            start:
              line: 1
              column: 8
              offset: 8
            end:
              line: 1
              column: 8
              offset: 8
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 5
            offset: 5
          end:
            line: 1
            column: 8
            offset: 8
        leadings: []
        trailings: []
      - node_type: array_item
        key:
          node_type: string
          quote: Single
          value: b
          loc:
            start:
              line: 1
              column: 11
              offset: 11
            end:
              line: 1
              column: 11
              offset: 11
          leadings: []
          trailings: []
        value:
          node_type: number
          value: "2"
          loc:
            start:
              line: 1
              column: 18
              offset: 18
            end:
              line: 1
              column: 18
              offset: 18
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 15
            offset: 15
          end:
            line: 1
            column: 18
            offset: 18
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 19
        offset: 19
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 20
    offset: 20
leadings: []
trailings: []
